# photo-Transfere-Lan

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: windows-build.yml
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/application/service/: auth_service.go  auth_service_test.go  dashboard_service.go  security_service.go  settings_service.go  upload_service.go
backend/internal/domain/entity/: activity_log.go  session.go  settings.go  upload.go  user.go
backend/internal/domain/repository/: repositories.go
backend/internal/infrastructure/database/: database.go
backend/internal/infrastructure/repository/: gorm_repositories.go
backend/internal/presentation/http/: server.go
backend/internal/presentation/websocket/: hub.go
backend/migrations/: 001_init.sql
docs/: architecture.md  database-schema.sql  folder-structure.md  openapi.yaml  testing.md  windows-clean-test-checklist.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/setup/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: StatusTile.tsx
frontend/lib/: api.ts
frontend/types/: api.ts
scripts/: build-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
