[package]
name = "phototransferlan"
version = "0.1.5"
description = "PhotoTransfer LAN Windows desktop shell"
authors = ["PhotoTransfer LAN"]
edition = "2021"

[lib]
name = "phototransferlan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.20"
dirs = "6"
